--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ header {
 
 main {
     width: 1100px;
-    height: 1600px;
+    height: auto;
     float: left;
     padding-top: 10px;
     padding-right: 10px;
